# watchdogd

./: .gitignore  CMakeLists.txt  LICENSE  README.md  debug.h  utils.c  utils.h  watchdog_fd.c  watchdog_fd.h  watchdogd.c
OpenWRT/: Config.in  Makefile
include/: iterate_executables.h
src/: iterate_executables.c  watchdog_fd.c  watchdogd.c
tests/: 2.sh
